overlays/impl/patches/app-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pega-web
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: pega-web
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
